--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -42,7 +42,7 @@
                 <div class="block">
                     <div class="media">
                         <div class="pull-left" href="#">
-                            <i class=" fa fa-foursquare"></i>
+                            <i class="fab fa-foursquare"></i>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Media heading</h4>
@@ -55,7 +55,7 @@
                 <div class="block">
                     <div class="media">
                         <div class="pull-left" href="#">
-                            <i class=" fa fa-phone"></i>
+                            <i class="fa fa-phone"></i>
                         </div>
                         <div class="media-body">
                             <h4 class="media-heading">Call Us</h4>
