feature - add products and change header of landing page

--- a/NongSanShop/Views/Home/Index.cshtml
+++ b/NongSanShop/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @model dynamic
 
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Trang chủ";
 }
 
 <!-- SLIDER Start
@@ -79,7 +79,7 @@
             <div class="col-md-12">
                 <div class="block">
                     <div class="block-heading">
-                        <h2>OUR FOOD CATEGORIES</h2>
+                        <h2>CÁC DANH MỤC NÔNG SẢN</h2>
                     </div>
                     <div class="row">
                         @foreach (dh_category item in ViewBag.Categories)
@@ -93,8 +93,8 @@
                                     <div class="caption">
                                         <p>@item.description</p>
                                         <p>
-                                            <a href="blog-single.html" class="btn btn-default btn-transparent" role="button">
-                                                <span>Check Items</span>
+                                            <a href="#" class="btn btn-default btn-transparent" role="button">
+                                                <span>Xem chi tiết</span>
                                             </a>
                                         </p>
                                     </div> <!-- End of /.caption -->
@@ -115,125 +115,30 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="products-heading">
-                    <h2>NEW PRODUCTS</h2>
+                    <h2>SẢN PHẨM MỚI</h2>
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div>	<!-- End of /.col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-2.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-3.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-4.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-5.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-6.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-7.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <a class="view-link shutter" href="#">
-                        <i class="fa fa-plus-circle"></i>Add To Cart
-                    </a>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
-            <div class="col-md-3">
-                <div class="products">
-                    <a href="single-product.html">
-                        <img src="~/wwwroot/images/product-image-8.jpg" alt="">
-                    </a>
-                    <a href="single-product.html">
-                        <h4>Amazing Italian Sauces</h4>
-                    </a>
-                    <p class="price">From: £69.99</p>
-                    <div>
-                        <a class="view-link shutter" href="#">
-                            <i class="fa fa-plus-circle"></i>Add To Cart
+            @foreach (dh_product item in ViewBag.Products)
+            {
+                <div class="col-md-3">
+                    <div class="products">
+                        <a href="single-product.html">
+                            <img src="~/wwwroot/uploads/@item.avatar" alt="">
                         </a>
-                    </div>
-                </div>	<!-- End of /.products -->
-            </div> <!-- End Of /.Col-md-3 -->
+                        <a href="single-product.html">
+                            <h4>@item.name</h4>
+                        </a>
+                        <p class="price">Chỉ từ: @item.price VND</p>
+                        <div>
+                            <a class="view-link shutter" href="#">
+                                <i class="fa fa-plus-circle"></i>Add To Cart
+                            </a>
+                        </div>
+                    </div>	<!-- End of /.products -->
+                </div> <!-- End Of /.Col-md-3 -->
+            }
         </div>	<!-- End of /.row -->
     </div>	<!-- End of /.container -->
 </section>	<!-- End of Section -->
