--- a/NongSanShop/Views/Shared/_ClientLayout.cshtml
+++ b/NongSanShop/Views/Shared/_ClientLayout.cshtml
@@ -47,7 +47,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
-                        <p class="contact-action"><i class="fa fa-phone-square"></i>LIÊN HỆ VỚI CHÚNG TÔI QUA HOSTLINE: <strong>+84898709170</strong></p>
+                        <p class="contact-action"><i class="fa fa-phone-square"></i>LIÊN HỆ VỚI CHÚNG TÔI QUA HOTLINE: <strong>+84898709170</strong></p>
                     </div>
                     <div class="col-md-3 clearfix">
                         <ul class="login-cart">
