category,blog,product,login layout

--- a/NongSanShop/Views/Blog/Delete.cshtml
+++ b/NongSanShop/Views/Blog/Delete.cshtml
@@ -1,9 +1,10 @@
-﻿@model NongSanShop.Models.dh_category
+﻿@model NongSanShop.Models.dh_blog
 
 @{
     ViewBag.Title = "Delete";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 
 <div class="container-fluid" style="text-align:center;">
     <h3>Are you sure you want to delete this?</h3>
@@ -19,5 +20,3 @@
         }
     </div>
 </div>
-
-
