--- a/NongSanShop/Views/Product/Create.cshtml
+++ b/NongSanShop/Views/Product/Create.cshtml
@@ -1,20 +1,19 @@
-﻿@model NongSanShop.Models.dh_category
+﻿@model NongSanShop.Models.dh_product
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 
 <div class="container-fluid">
-    @using (Html.BeginForm("Edit", "Category", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    @using (Html.BeginForm("Create", "Product", FormMethod.Post, new { enctype = "multipart/form-data" }))
     {
         @Html.AntiForgeryToken()
+
         <div class="form-horizontal">
-            <h4>dh_category</h4>
+            <h4>Product</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.id)
-
             <div class="form-group">
                 @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
@@ -28,6 +27,41 @@
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.price, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.price, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.price, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.quantity, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.quantity, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.category_id, "category_id", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.DropDownList("category_id", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.category_id, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <img id="output" alt="avatar" width="200" height="220" src="~/wwwroot/uploads/products/no_avatar.png">
+                    <p>
+                        <label for="ufile" style="cursor:pointer">Chọn file ảnh</label>
+                        <input id="ufile" name="ImageFile" type="file" style="display:none;" onchange="loadFile(event)" />
+                    </p>
                 </div>
             </div>
 
@@ -48,20 +82,8 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.avatar, htmlAttributes: new { @class = "control-label col-md-2" })
-                @{
-                    string ImagePath = "~/wwwroot/uploads/categories/" + Model.avatar;
-                }
-                <div class="col-md-10">
-                    <img id="output" class="img-rounded" alt="Ảnh" width="150" height="150" src="@Url.Content(ImagePath)" />
-                    <p><label for="ufile" style="cursor: pointer;">Chọn file ảnh</label></p>
-                    <input name="ImageFile" type="file" id="ufile" style="display : none;" onchange="loadFile(event)" />
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
-                    </div>
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
                 </div>
             </div>
         </div>
@@ -71,6 +93,7 @@
         @Html.ActionLink("Back to List", "Index")
     </div>
 </div>
+
 
 @if (ViewBag.Error != null)
 {
@@ -84,8 +107,8 @@
 
 <script>
     var loadFile = function (event) {
-        var image = document.getElementById('output');
-        image.src = URL.createObjectURL(event.target.files[0]);
+        var avt = document.getElementById("output");
+        avt.src = URL.createObjectURL(event.target.files[0]);
     };
 </script>
 
