--- a/NongSanShop/Views/Product/Delete.cshtml
+++ b/NongSanShop/Views/Product/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model NongSanShop.Models.dh_category
+﻿@model NongSanShop.Models.dh_product
 
 @{
     ViewBag.Title = "Delete";
@@ -19,5 +19,3 @@
         }
     </div>
 </div>
-
-
