--- a/NongSanShop/Views/Product/Index.cshtml
+++ b/NongSanShop/Views/Product/Index.cshtml
@@ -1,9 +1,10 @@
-﻿@model IEnumerable<NongSanShop.Models.dh_category>
+﻿@model IEnumerable<NongSanShop.Models.dh_product>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
+
 
 <div class="container-fluid">
     <h3 class="text-dark mb-4">Category</h3>
@@ -36,13 +37,22 @@
                     <thead>
                         <tr>
                             <th>
-                                Avatar
+                                Category
                             </th>
                             <th>
                                 Name
                             </th>
                             <th>
                                 Description
+                            </th>
+                            <th>
+                                Price
+                            </th>
+                            <th>
+                                Quantity
+                            </th>
+                            <th>
+                                Avatar
                             </th>
                             <th>
                                 Created
@@ -58,18 +68,27 @@
                         {
                             <tr>
                                 <td>
-                                    @{
-                                        string imgPath = "~/wwwroot/uploads/categories/" + item.avatar;
-                                    }
-                                    <img src="@Url.Content(imgPath)" width="100" />
-                                    <br />
-                                    @Html.DisplayFor(modelItem => item.avatar)
+                                    @Html.DisplayFor(modelItem => item.dh_category.name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.name)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.description)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.price)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.quantity)
+                                </td>
+                                <td>
+                                    @{
+                                        string imgPath = "~/wwwroot/uploads/products/" + item.avatar;
+                                    }
+                                    <img src="@Url.Content(imgPath)" width="100" />
+                                    <br />
+                                    @Html.DisplayFor(modelItem => item.avatar)
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.created)
@@ -89,7 +108,7 @@
                         <tr>
                             <td>
                                 <strong>
-                                    Avatar
+                                    Category
                                 </strong>
                             </td>
                             <td>
@@ -100,6 +119,21 @@
                             <td>
                                 <strong>
                                     Description
+                                </strong>
+                            </td>
+                            <td>
+                                <strong>
+                                    Price
+                                </strong>
+                            </td>
+                            <td>
+                                <strong>
+                                    Quantity
+                                </strong>
+                            </td>
+                            <td>
+                                <strong>
+                                    Avatar
                                 </strong>
                             </td>
                             <td>
