--- a/NongSanShop/Views/Shared/_AdminLayout.cshtml
+++ b/NongSanShop/Views/Shared/_AdminLayout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/wwwroot/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="~/wwwroot/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="~/wwwroot/fonts/fontawesome5-overrides.min.css">
+    @Scripts.Render("~/bundles/modernizr")
 </head>
 
 <body id="page-top">
@@ -30,14 +31,14 @@
                     <li class="nav-item"><a class="nav-link active" href="@Url.Action("Index","Admin")"><i class="fas fa-tachometer-alt"></i><span>Dashboard</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="@Url.Action("Info","Admin")"><i class="fas fa-user"></i><span>Profile</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Category")"><i class="fas fa-table"></i><span>Category</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html"><i class="far fa-user-circle"></i><span>Login</span></a></li>
-                    <li class="nav-item"><a class="nav-link" href="register.html"><i class="fas fa-user-circle"></i><span>Register</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Blog")"><i class="fas fa-table"></i><span>Blog</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Product")"><i class="fas fa-table"></i><span>Product</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
         </nav>
         <div class="d-flex flex-column" id="content-wrapper">
-            
+
             <div id="content">
                 <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top">
                     <div class="container-fluid">
@@ -98,7 +99,7 @@
                                     <div class="dropdown-menu dropdown-menu-right dropdown-list animated--grow-in">
                                         <h6 class="dropdown-header">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="~/wwwroot/img/avatars/avatar4.jpeg">
+                                                <img class="rounded-circle" src="~/wwwroot/images/avatars/avatar4.jpeg">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -107,7 +108,7 @@
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="~/wwwroot/img/avatars/avatar2.jpeg">
+                                                <img class="rounded-circle" src="~/wwwroot/images/avatars/avatar2.jpeg">
                                                 <div class="status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -116,7 +117,7 @@
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="~/wwwroot/img/avatars/avatar3.jpeg">
+                                                <img class="rounded-circle" src="~/wwwroot/images/avatars/avatar3.jpeg">
                                                 <div class="bg-warning status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -125,7 +126,7 @@
                                             </div>
                                         </a><a class="dropdown-item d-flex align-items-center" href="#">
                                             <div class="dropdown-list-image mr-3">
-                                                <img class="rounded-circle" src="~/wwwroot/img/avatars/avatar5.jpeg">
+                                                <img class="rounded-circle" src="~/wwwroot/images/avatars/avatar5.jpeg">
                                                 <div class="bg-success status-indicator"></div>
                                             </div>
                                             <div class="font-weight-bold">
@@ -143,7 +144,7 @@
                                     <a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#"><span class="d-none d-lg-inline mr-2 text-gray-600 small">Valerie Luna</span><img class="border rounded-circle img-profile" src="~/wwwroot/img/avatars/avatar1.jpeg"></a>
                                     <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
                                         <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
+                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="@Url.Action("Login","Admin")"><i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
                                 </div>
                             </li>
@@ -164,6 +165,7 @@
     <script src="~/wwwroot/js/chart.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.js"></script>
     <script src="~/wwwroot/js/script.min.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 
 </html>
