--- a/NongSanShop/Views/Shared/_AdminLayout.cshtml
+++ b/NongSanShop/Views/Shared/_AdminLayout.cshtml
@@ -33,6 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Category")"><i class="fas fa-table"></i><span>Category</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Blog")"><i class="fas fa-table"></i><span>Blog</span></a></li>
                     <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Product")"><i class="fas fa-table"></i><span>Product</span></a></li>
+                    <li class="nav-item"><a class="nav-link" href="@Url.Action("Index","Account")"><i class="fas fa-table"></i><span>Account</span></a></li>
                 </ul>
                 <div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div>
             </div>
